testsuite/poke.pkl/strings-esc-diag-2.pk
/* { dg-do compile } */

var s = "x\x0z"; /* { dg-error "" } */
